hphp/hack/test/typecheck/coeffects/default-arg/static_prop.php.exp
File "static_prop.php", line 11, characters 27-28:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "static_prop.php", line 11, characters 14-15:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "static_prop.php", line 19, characters 25-26:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "static_prop.php", line 19, characters 14-15:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "static_prop.php", line 28, characters 21-22:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "static_prop.php", line 28, characters 12-13:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
